[gd_scene load_steps=114 format=2]

[ext_resource path="res://assets/pixel_platformer_player/idle/2.png" type="Texture" id=1]
[ext_resource path="res://assets/pixel_platformer_player/idle/3.png" type="Texture" id=2]
[ext_resource path="res://assets/pixel_platformer_player/idle/1.png" type="Texture" id=3]
[ext_resource path="res://assets/pixel_platformer_player/idle/6.png" type="Texture" id=4]
[ext_resource path="res://assets/pixel_platformer_player/idle/4.png" type="Texture" id=5]
[ext_resource path="res://assets/pixel_platformer_player/idle/5.png" type="Texture" id=6]
[ext_resource path="res://assets/pixel_platformer_player/idle/7.png" type="Texture" id=7]
[ext_resource path="res://assets/pixel_platformer_player/run/6.png" type="Texture" id=8]
[ext_resource path="res://assets/pixel_platformer_player/run/8.png" type="Texture" id=9]
[ext_resource path="res://assets/pixel_platformer_player/run/4.png" type="Texture" id=10]
[ext_resource path="res://assets/pixel_platformer_player/run/5.png" type="Texture" id=11]
[ext_resource path="res://assets/pixel_platformer_player/run/1.png" type="Texture" id=12]
[ext_resource path="res://assets/pixel_platformer_player/run/3.png" type="Texture" id=13]
[ext_resource path="res://assets/pixel_platformer_player/run/2.png" type="Texture" id=14]
[ext_resource path="res://assets/pixel_platformer_player/run/7.png" type="Texture" id=15]
[ext_resource path="res://assets/pixel_platformer_player/jump/2.png" type="Texture" id=16]
[ext_resource path="res://assets/pixel_platformer_player/jump/3.png" type="Texture" id=17]
[ext_resource path="res://assets/pixel_platformer_player/jump/1.png" type="Texture" id=18]
[ext_resource path="res://Camera2D.gd" type="Script" id=19]
[ext_resource path="res://assets/floaty_128.png" type="Texture" id=20]
[ext_resource path="res://Magneficent.gd" type="Script" id=21]
[ext_resource path="res://assets/pixel_platformer_player/knockback/1.png" type="Texture" id=22]
[ext_resource path="res://assets/pixel_platformer_player/knockback/3.png" type="Texture" id=23]
[ext_resource path="res://assets/pixel_platformer_player/knockback/6.png" type="Texture" id=24]
[ext_resource path="res://assets/pixel_platformer_player/knockback/4.png" type="Texture" id=25]
[ext_resource path="res://assets/pixel_platformer_player/knockback/5.png" type="Texture" id=26]
[ext_resource path="res://assets/pixel_platformer_player/knockback/2.png" type="Texture" id=27]
[ext_resource path="res://assets/pixel_platformer_player/front_flip/14.png" type="Texture" id=28]
[ext_resource path="res://assets/pixel_platformer_player/front_flip/12.png" type="Texture" id=29]
[ext_resource path="res://assets/pixel_platformer_player/front_flip/13.png" type="Texture" id=30]
[ext_resource path="res://assets/pixel_platformer_player/front_flip/4.png" type="Texture" id=31]
[ext_resource path="res://assets/pixel_platformer_player/front_flip/2.png" type="Texture" id=32]
[ext_resource path="res://assets/pixel_platformer_player/front_flip/1.png" type="Texture" id=33]
[ext_resource path="res://assets/pixel_platformer_player/front_flip/3.png" type="Texture" id=34]
[ext_resource path="res://assets/pixel_platformer_player/front_flip/5.png" type="Texture" id=35]
[ext_resource path="res://assets/pixel_platformer_player/front_flip/8.png" type="Texture" id=36]
[ext_resource path="res://assets/pixel_platformer_player/front_flip/9.png" type="Texture" id=37]
[ext_resource path="res://assets/pixel_platformer_player/front_flip/10.png" type="Texture" id=38]
[ext_resource path="res://assets/pixel_platformer_player/front_flip/11.png" type="Texture" id=39]
[ext_resource path="res://assets/pixel_platformer_player/front_flip/7.png" type="Texture" id=40]
[ext_resource path="res://assets/pixel_platformer_player/front_flip/6.png" type="Texture" id=41]
[ext_resource path="res://assets/sounds/jump1.ogg" type="AudioStream" id=42]
[ext_resource path="res://assets/sounds/error_007.ogg" type="AudioStream" id=43]
[ext_resource path="res://assets/sprites/characters/Warrior/Death.png" type="Texture" id=44]
[ext_resource path="res://assets/sprites/characters/Warrior/Jump.png" type="Texture" id=45]
[ext_resource path="res://assets/sprites/characters/Warrior/Take hit.png" type="Texture" id=46]
[ext_resource path="res://assets/sprites/characters/Warrior/Attack3.png" type="Texture" id=47]
[ext_resource path="res://assets/sprites/characters/Warrior/Idle.png" type="Texture" id=48]
[ext_resource path="res://assets/sprites/characters/Warrior/Run.png" type="Texture" id=49]
[ext_resource path="res://assets/sprites/characters/Warrior/Attack1.png" type="Texture" id=50]
[ext_resource path="res://assets/sprites/characters/Warrior/Attack2.png" type="Texture" id=51]
[ext_resource path="res://assets/sprites/characters/Warrior/Fall.png" type="Texture" id=52]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 44 )
region = Rect2( 0, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 44 )
region = Rect2( 162, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 44 )
region = Rect2( 324, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 44 )
region = Rect2( 486, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 44 )
region = Rect2( 648, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 44 )
region = Rect2( 810, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 44 )
region = Rect2( 972, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 48 )
region = Rect2( 0, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 48 )
region = Rect2( 162, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 48 )
region = Rect2( 324, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 48 )
region = Rect2( 486, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 48 )
region = Rect2( 648, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 48 )
region = Rect2( 810, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 48 )
region = Rect2( 972, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 48 )
region = Rect2( 1134, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 48 )
region = Rect2( 1296, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 48 )
region = Rect2( 1458, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 49 )
region = Rect2( 0, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 49 )
region = Rect2( 162, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 49 )
region = Rect2( 324, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 49 )
region = Rect2( 486, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 49 )
region = Rect2( 648, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 49 )
region = Rect2( 810, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 49 )
region = Rect2( 972, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 49 )
region = Rect2( 1134, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 52 )
region = Rect2( 0, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 52 )
region = Rect2( 162, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 52 )
region = Rect2( 324, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 45 )
region = Rect2( 0, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 45 )
region = Rect2( 162, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 45 )
region = Rect2( 324, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 46 )
region = Rect2( 0, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 46 )
region = Rect2( 162, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 46 )
region = Rect2( 324, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 47 )
region = Rect2( 0, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 47 )
region = Rect2( 162, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 47 )
region = Rect2( 324, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 47 )
region = Rect2( 486, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 47 )
region = Rect2( 648, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 47 )
region = Rect2( 810, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 47 )
region = Rect2( 972, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 47 )
region = Rect2( 1134, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 51 )
region = Rect2( 0, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 51 )
region = Rect2( 162, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 51 )
region = Rect2( 324, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 51 )
region = Rect2( 486, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 51 )
region = Rect2( 648, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 51 )
region = Rect2( 810, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 51 )
region = Rect2( 972, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 50 )
region = Rect2( 0, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 50 )
region = Rect2( 162, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 50 )
region = Rect2( 324, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 50 )
region = Rect2( 486, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 50 )
region = Rect2( 648, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 50 )
region = Rect2( 810, 0, 162, 162 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 50 )
region = Rect2( 972, 0, 162, 162 )

[sub_resource type="SpriteFrames" id=57]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "WarriorDeath",
"speed": 12.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 27 ), ExtResource( 23 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 24 ) ],
"loop": true,
"name": "Knockback",
"speed": 10.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 7 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "WarriorIdle",
"speed": 12.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "WarriorRun",
"speed": 12.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "WarriorFall",
"speed": 12.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "WarriorJump",
"speed": 12.0
}, {
"frames": [ SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": true,
"name": "WarriorHit",
"speed": 12.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 32 ), ExtResource( 34 ), ExtResource( 31 ), ExtResource( 35 ), ExtResource( 41 ), ExtResource( 40 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 28 ) ],
"loop": true,
"name": "Front_Flip",
"speed": 15.0
}, {
"frames": [ SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ) ],
"loop": true,
"name": "WarriorAtk3",
"speed": 12.0
}, {
"frames": [ SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ) ],
"loop": true,
"name": "WarriorAtk2",
"speed": 12.0
}, {
"frames": [ SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ) ],
"loop": true,
"name": "WarriorAtk1",
"speed": 15.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 15 ), ExtResource( 9 ) ],
"loop": true,
"name": "Walk",
"speed": 15.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "Air",
"speed": 3.0
} ]

[sub_resource type="CapsuleShape2D" id=58]
radius = 8.0
height = 48.0

[sub_resource type="CanvasItemMaterial" id=59]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 7
particles_anim_v_frames = 7
particles_anim_loop = true

[sub_resource type="ParticlesMaterial" id=60]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
anim_speed = 1.0

[sub_resource type="RectangleShape2D" id=61]
extents = Vector2( 24, 32 )

[node name="Magneficent" type="KinematicBody2D"]
collision_mask = 30
script = ExtResource( 21 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -24 )
scale = Vector2( 1.18519, 1.16637 )
frames = SubResource( 57 )
animation = "WarriorAtk1"
frame = 5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -32 )
shape = SubResource( 58 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_bottom = 512
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.3
drag_margin_right = 0.3
editor_draw_limits = true
script = ExtResource( 19 )

[node name="Particles2D" type="Particles2D" parent="."]
visible = false
show_behind_parent = true
material = SubResource( 59 )
amount = 6
lifetime = 3.0
process_material = SubResource( 60 )
texture = ExtResource( 20 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="SoundJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 42 )
volume_db = -12.0

[node name="SoundOuch" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 43 )
volume_db = -5.0

[node name="AttackArea" type="Area2D" parent="." groups=[
"sword",
]]

[node name="AttackCollision" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 36, -32 )
shape = SubResource( 61 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 60.0679, -32.0362 )

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
